Fix crash on removing key bindings.  Patch by  Dario Andres

BUG: 183069

svn path=/trunk/KDE/kdebase/apps/konsole/; revision=1082422